--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,12 @@ langchain-community==0.3.13
 langchain-core==0.3.28
 langchain-groq==0.2.2
 langchain-text-splitters==0.3.4
+langgraph==0.2.60
+langgraph-checkpoint==2.0.9
+langgraph-sdk==0.1.48
 langsmith==0.2.4
 marshmallow==3.23.2
+msgpack==1.1.0
 multidict==6.1.0
 mypy-extensions==1.0.0
 numpy==2.2.1
