--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,97 @@
 aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
+aiohttp==3.10.11
 aiosignal==1.3.2
 annotated-types==0.7.0
-anyio==4.7.0
+anyio==4.8.0
+appnope==0.1.4
 asttokens==3.0.0
-attrs==24.3.0
+attrs==25.1.0
 certifi==2024.12.14
-charset-normalizer==3.4.0
+charset-normalizer==3.4.1
+comm==0.2.2
 dataclasses-json==0.6.7
+debugpy==1.8.12
 decorator==5.1.1
 distro==1.9.0
-executing==2.1.0
+executing==2.2.0
 frozenlist==1.5.0
-groq==0.13.1
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 httpx-sse==0.4.0
 idna==3.10
+iniconfig==2.0.0
+ipykernel==6.29.5
 ipython==8.31.0
 jedi==0.19.2
+jiter==0.8.2
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain==0.3.13
-langchain-community==0.3.13
-langchain-core==0.3.28
-langchain-groq==0.2.2
-langchain-text-splitters==0.3.4
-langgraph==0.2.60
-langgraph-checkpoint==2.0.9
-langgraph-sdk==0.1.48
-langsmith==0.2.4
-marshmallow==3.23.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+langchain==0.3.15
+langchain-community==0.3.15
+langchain-core==0.3.31
+langchain-ollama==0.2.2
+langchain-openai==0.3.2
+langchain-pinecone==0.2.2
+langchain-tests==0.3.9
+langchain-text-splitters==0.3.5
+langsmith==0.3.1
+marshmallow==3.26.0
 matplotlib-inline==0.1.7
-msgpack==1.1.0
 multidict==6.1.0
 mypy-extensions==1.0.0
-numpy==2.2.1
-orjson==3.10.12
+nest-asyncio==1.6.0
+numpy==1.26.4
+ollama==0.4.7
+openai==1.60.2
+orjson==3.10.15
 packaging==24.2
+pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
-prompt_toolkit==3.0.48
+pinecone==5.4.2
+pinecone-notebooks==0.1.1
+pinecone-plugin-inference==3.1.0
+pinecone-plugin-interface==0.0.7
+platformdirs==4.3.6
+pluggy==1.5.0
+prompt_toolkit==3.0.50
 propcache==0.2.1
+psutil==6.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
-pydantic==2.10.4
-pydantic-settings==2.7.0
+pydantic==2.10.6
+pydantic-settings==2.7.1
 pydantic_core==2.27.2
-Pygments==2.18.0
+Pygments==2.19.1
+pypdf==5.2.0
+pytest==8.3.4
+pytest-asyncio==0.25.2
+pytest-socket==0.7.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
 PyYAML==6.0.2
+pyzmq==26.2.0
+regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
+six==1.17.0
 sniffio==1.3.1
-SQLAlchemy==2.0.36
+SQLAlchemy==2.0.37
 stack-data==0.6.3
+syrupy==4.8.1
 tenacity==9.0.0
+tiktoken==0.8.0
+tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
 typing-inspect==0.9.0
 typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.3.0
 wcwidth==0.2.13
 yarl==1.18.3
+zstandard==0.23.0
